--- a/remotecv/Dockerfile
+++ b/remotecv/Dockerfile
@@ -15,5 +15,7 @@ RUN pip install --trusted-host None --no-cache-dir \
    -r /app/requirements.txt
 
 COPY docker-entrypoint.sh /
+# Ensure LF endings and executable bit to avoid exec issues
+RUN sed -i 's/\r$//' /docker-entrypoint.sh && chmod +x /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["remotecv"]
